WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245843
[GLib] D-Bus proxy quietly fails if host session bus address is an abstract socket
https://bugs.webkit.org/show_bug.cgi?id=245843
Summary
[GLib] D-Bus proxy quietly fails if host session bus address is an abstract s...
Michael Catanzaro
Reported
2022-09-29 13:10:38 PDT
Moving this from
https://gitlab.gnome.org/GNOME/epiphany/-/issues/1852
. Currently we have xdg-dbus-proxy create its client socket at the exact same location in the sandbox where the host session bus socket exists on the host system, so we don't have to mess with the DBUS_SESSION_BUS_ADDRESS environment variable. Problem is, if the host session bus address is an abstract socket, XDGDBusProxy::makePath simply fails. We will change dbus-daemon to not default to using abstract sockets anymore in
https://gitlab.freedesktop.org/dbus/dbus/-/issues/416
, but WebKit should support this anyway. Using an abstract socket for the host session bus creates a big sandbox escape if combined with host network access, but WebKit's web process usually does not have network access (unless using a non-local X server).
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-10-04 18:46:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5011
EWS
Comment 2
2022-10-06 08:03:24 PDT
Committed
255218@main
(79f41316d99e): <
https://commits.webkit.org/255218@main
> Reviewed commits have been landed. Closing PR #5011 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug